--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="app.js" defer></script>
+    <link href="style.css" rel="stylesheet">
     <title>Spelling COS</title>
 </head>
 <body>
@@ -15,7 +16,7 @@
             <h2 class="text-center"> Spelling COS - Practice platform</h2>    
         </header>
         <main>
-            <nav class="d-flex align-content-between gap-2 mb-5 center">
+            <nav class="flex-row align-content-between gap-5 mb-5 center flex-wrap">
                 <button onclick="classroomClick()">Classrom Objects</button>
                 <button onclick="natureClick()">Nature</button>
                 <button onclick="colorsClick()">Colors</button>
@@ -40,6 +41,7 @@
             <div class="container">
                 <h1 class="text-center" id="idWord">?</h1>
             </div>
+            <div id="control">
             <button onclick="textToSpeech()">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z" />
@@ -52,6 +54,7 @@
                   </svg>
                 Spelling
             </button>
+        </div>
         </main>
     </div>
    
